<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtHeaderLocal"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelLocal"
            android:textAppearance="?attr/textAppearanceBody2" />


        <TextView
            android:id="@+id/txtHeaderConfirmados"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelConfirmed"
            android:textAppearance="?attr/textAppearanceBody2" />


        <TextView
            android:id="@+id/txtHeaderRecuperados"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelRecovered"
            android:textAppearance="?attr/textAppearanceBody2" />


        <TextView
            android:id="@+id/txtHeaderMortos"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelDeaths"
            android:textAppearance="?attr/textAppearanceBody2" />


    </LinearLayout>
</LinearLayout>