<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/viewGroupCaseByStateItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:importantForAccessibility="yes"

    >


        <TextView
            android:id="@+id/txtLocal"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelLocal"
            android:focusable="false"
            android:importantForAccessibility="no"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            />


        <TextView
            android:id="@+id/txtConfirmados"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelConfirmed"
            android:focusable="false"
            android:importantForAccessibility="no"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            />


        <TextView
            android:id="@+id/txtRecuperados"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelRecovered"
            android:focusable="false"
            android:importantForAccessibility="no"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            />


        <TextView
            android:id="@+id/txtMortos"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelDeaths"
            android:focusable="false"
            android:importantForAccessibility="no"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"/>


    </LinearLayout>



