<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollCasosCovid19"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp">

        <include layout="@layout/barra_progresso"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="13dp">


                <TextView
                    android:id="@+id/titleTotalCases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:focusable="true"
                    android:importantForAccessibility="yes"
                    android:text="@string/labelTitleTotalCasesBrasil"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <View style="@style/horizontalDivider" />



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    app:hintEnabled="true"
                    android:hint="@string/labelState"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <jrizani.jrspinner.JRSpinner
                        android:id="@+id/JRSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="false"
                        android:textColor="@color/colorPrimary"
                        android:focusable="true"
                        android:importantForAccessibility="yes"
                        app:jrs_multiple="false"
                        android:contentDescription="@string/labelState"
                        app:jrs_title="@string/labelChooseState" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/labelConfirmed"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/txtTotalConfirmed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:focusable="true"
                            android:importantForAccessibility="yes"
                            android:textAppearance="?attr/textAppearanceHeadline6" />



                    </LinearLayout>

                    <View style="@style/verticalDivider" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">
                        <!-- Title, secondary and supporting text -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/labelRecovered"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/txtTotalRecovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceHeadline6" />


                    </LinearLayout>
                    <View style="@style/verticalDivider" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">
                        <!-- Title, secondary and supporting text -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/labelDeaths"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/txtTotalDeaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceHeadline6" />



                    </LinearLayout>


                </LinearLayout>
                <View style="@style/horizontalDivider"/>

                <TextView
                    android:id="@+id/titleTotalCasesByState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="true"
                    android:importantForAccessibility="yes"
                    android:text="@string/labelTitleTotalCasesByState"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <View style="@style/horizontalDivider" />

                <HorizontalScrollView
                    android:importantForAccessibility="no"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvResultadosCovid19"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                  />
                </HorizontalScrollView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardResultsWorld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="13dp">

                <TextView
                    android:id="@+id/titleTotalWorldCases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:focusable="true"
                    android:importantForAccessibility="yes"
                    android:text="@string/labelTitleTotalCasesWorld"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <View style="@style/horizontalDivider" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/labelConfirmed"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/txtTotalConfirmedWorld"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:focusable="true"
                            android:importantForAccessibility="yes"
                            android:textAppearance="?attr/textAppearanceHeadline6" />



                    </LinearLayout>

                    <View style="@style/verticalDivider" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">
                        <!-- Title, secondary and supporting text -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/labelRecovered"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/txtTotalRecoveredWorld"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceHeadline6" />


                    </LinearLayout>
                    <View style="@style/verticalDivider" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">
                        <!-- Title, secondary and supporting text -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/labelDeaths"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/txtTotalDeathsWorld"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:focusable="false"
                            android:importantForAccessibility="no"
                            android:textAppearance="?attr/textAppearanceHeadline6" />



                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</ScrollView>
